add img into chatroom

--- a/views/chatroom.pug
+++ b/views/chatroom.pug
@@ -1,4 +1,8 @@
 extends layout 
 
 block content
-    h2(class="text-center text-6xl text-red-800") Bienvenido a la sala de chat
+    h2(class="text-center text-6xl text-red-800") Bienvenido a la sala de chat :D
+
+
+
+    img(src="/images/chatroom-img.webp", alt="Imagen de Fondo", class="lg:block hidden absolute bottom-0 right-0 mb-4 mr-4")
